force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar as perguntas que os usuários terão acesso ao criar um evento de visita.</description>
    
    <label>Pergunta</label>
    <nameField>
        <displayFormat>PER-{00000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Perguntas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>