force-app/main/default/objects/Question__c/fields/PicklistValues__c.field-meta.xml
<CustomField>
    <fullName>PicklistValues__c</fullName>
    <description>Este campo armazena os valores predefinidos que serão utilizados no tipo de resposta, separados por ponto e virgula, ex. Houve praga; Não houve praga;Não sei.</description>
    <inlineHelpText>Este campo armazena os valores predefinidos que serão utilizados no tipo de resposta, separados por ponto e virgula, ex. Houve praga; Não houve praga;Não sei.</inlineHelpText>
    <label>Valores Predefinidos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>