force-app/main/default/objects/Question__c/fields/QuestionDescription__c.field-meta.xml
<CustomField>
    <fullName>QuestionDescription__c</fullName>
    <description>Descrição da pergunta que o usuário fará para o cliente final.</description>
    <inlineHelpText>Descrição da pergunta que o usuário fará para o cliente final.</inlineHelpText>
    <label>Descrição da Pergunta</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>