force-app/main/default/objects/Question__c/fields/QuestionType__c.field-meta.xml
<CustomField>
    <fullName>QuestionType__c</fullName>
    <description>Este campo indica o tipo de resposta que a pergunta espera, caixa de seleção para Sim/Não, Data para Data (14/08/1989), Valores Predefinidos para uma lista predefinida e campo de texto para livre preenchimento.</description>
    <inlineHelpText>Este campo indica o tipo de resposta que a pergunta espera, caixa de seleção para Sim/Não, Data para Data (14/08/1989), Valores Predefinidos para uma lista predefinida e campo de texto para livre preenchimento.</inlineHelpText>
    <label>Tipo Resposta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caixa de Seleção</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Valores Predefinidos</fullName>
            </value>
            <value>
                <fullName>Texto para livre preenchimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>