force-app/main/default/objects/Question__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo que informa se o RTV pode deixar a pergunta em branco ou não.</description>
    <inlineHelpText>Campo que informa se o RTV pode deixar a pergunta em branco ou não.</inlineHelpText>
    <label>Obrigatório</label>
    <type>Checkbox</type>
</CustomField>